--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,7 @@ layout: default
 
 	{{ content }}
 
-</article>
+
 
 <div class="page-navigation">
 	{% if page.next.url %}
@@ -36,3 +36,19 @@ layout: default
     <a class="prev" href="{{page.previous.url}}" title="PREV: {{page.previous.title}}">&gt;&gt;</a>
   {% endif %}
 </div>
+
+ {% if site.discus_identifier %}
+ 	{% if page.comments %}
+            <div id="disqus_thread" class="article-comments"></div>
+            <script>
+              (function() {
+                  var d = document, s = d.createElement('script');
+                  s.src = '//{{ site.discus_identifier }}.disqus.com/embed.js';
+                  s.setAttribute('data-timestamp', +new Date());
+                  (d.head || d.body).appendChild(s);
+              })();
+            </script>
+            <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+  	{% endif %}
+  {% endif %}
+  </article>
