--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,8 +9,16 @@
 	{% endif %}
 
 	<a href="{{ link | prepend: site.baseurl }}">
-		<img src="http://www.gravatar.com/avatar/{{ site.author_gravatar }}.png?s=80" class="gravatar">
+		<img src="{{ site.baseurl }}/assets/brainlogo_clear.png" class="gravatar">
 	</a>
-	<span class="logo-prompt">{{ prompt }}</span>
+	<span class="logo-prompt">{{ prompt }}</span>	
 
+</aside>
+
+<aside class="blog-title">
+{% if page.url == '/index.html' or page.url =='/' %}
+	<H1>Hypercolumn</H1>
+	<p>A machine learning, electronics, science & general curiosities blog.</p>
+	<div class="divider"></div>
+	{% endif %}
 </aside>
